<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_hello"
            android:id="@id/txt_hello"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/main_show_webview" android:id="@+id/btn_show_webview" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_get_sysinfo"
            android:id="@+id/btn_sysinfo" android:layout_gravity="right"/>
</LinearLayout>

