<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textUrl" android:editable="true" android:enabled="true"
            android:focusable="true" android:hint="@string/webview_url_hint" android:inputType="textUri"
            android:text="@string/txt_webview_url_default"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/btn_webview_ok" android:id="@+id/btn_webview_go"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <WebView android:layout_width="match_parent" android:layout_height="475dp" android:id="@+id/webview"/>
    </LinearLayout>
</LinearLayout>